--- a/css/styles.css
+++ b/css/styles.css
@@ -1,72 +1,58 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
-.favs {
-    color: #CC2424;
-    font-size: xx-large;
-    position: absolute;
-    top: 15px;
-    left: 15px;
-
-}
 
 * {
-    box-sizing: border-box;
     margin: 0;
+    box-sizing: border-box;
     font-family: sans-serif;
 }
 
 #offer{
-    padding: 5px 0;
     background-color: #1CD1B0;
-}
-
-#offer-img {
-    background-image: url('../img/Descuentos-20.png');
-    height: 15px;
-    background-position: 30px 0;
-    background-size:contain;
+    height: 25px;
+    padding-bottom: 10px;
+    background-size: 150px;
+    background-position: 30px 5px;
     background-repeat: no-repeat;
-}
-
-header{
-    padding: 18px 0;
+    background-image: url('../img/Descuentos-20.png');
 }
 
 header, footer, .ver-mas {
-    background-color: #00669F;
     color: white;
-}
-
-.card, .card-bg, .card-img {
-    box-shadow: 0px 2px 2px 0px #00000040;
+    background-color: #00669F;
 }
 
 header {
-    box-shadow: 0px 5px 3px #00000040;
-    position: sticky;
     top: 0;
-    z-index: 3;
+    z-index: 1;
+    position: sticky;
+    padding-top: 18px;
     padding-left: 30px;
-    }
+    padding-bottom: 18px;
+    box-shadow: 0px 5px 3px #00000040;
+}
 
-h1, h2{
-    font-family: "Roboto", sans-serif;
+h1, h2 {
     font-weight: lighter;
-    font-size: 30px;
+    font-family: "Roboto", sans-serif;
 }
 
 main {
     padding-top: 30px;
 }
 
+.card, .card-bg, .card-img {
+    box-shadow: 0px 2px 2px 0px #00000040;
+}
+
 .card {
-    background: #F3F3F3;
     width: 300px;
     height: 500px;
-    position: relative;
-    left: calc(50% - 150px);
-    margin-bottom: 40px; 
     display: flex;
+    position: relative;
+    margin-bottom: 40px; 
+    background: #F3F3F3;
     flex-direction: column;
+    left: calc(50% - 150px);
 }
 
 .card p {
@@ -76,76 +62,95 @@ main {
 }
 
 .ver-mas, h2 {
-    text-align: center;
     padding: 15px 0; 
+    text-align: center;
 }
 
 .card-bg {
     height: 180px;
-    background-repeat: no-repeat;
     margin-bottom: 50px;
     border-radius: 25px 25px 0 0;   
+    background-repeat: no-repeat;
 }
 
 #bg-batman {
-    background-image: url('../img/bg-batman.jpg');
-    background-position: 75% 50%;
     background-size: 550px;
+    background-position: 75% 50%;
+    background-image: url('../img/bg-batman.jpg');
 }
 
 #bg-wonderw {
-    background-image: url('../img/bg-wonderw.jpg');
-    background-position: 80% 45%;
     background-size: 350px;
+    background-position: 80% 45%;
+    background-image: url('../img/bg-wonderw.jpg');
 }
 
 #bg-superman {
-    background-image: url('../img/bg-superman.jpg');
-    background-position: 30% 25%;
     background-size: 550px;
+    background-position: 30% 25%;
+    background-image: url('../img/bg-superman.jpg');
 }
 
 .card-img {
-    height: 130px;
-    width: 130px;
-    position:absolute;
     left: 85px;
     top: 100px;
+    width: 130px;
+    height: 130px;
+    position:absolute;
     border-radius: 50%;
     background-repeat: no-repeat;
 }
 
 #img-batman {
-    background-image: url('../img/batman.jpg');
-    background-position: 58% 0;
     background-size: 400px;
+    background-position: 58% 0;
+    background-image: url('../img/batman.jpg');
 }
 
 #img-wonderw {
-    background-image: url('../img/wonderw.jpg');
-    background-position: 50% 0;
     background-size: 150px; 
+    background-position: 50% 0;
+    background-image: url('../img/wonderw.jpg');
 }
 
 #img-superman {
-    background-image: url('../img/superman.jpg');
-    background-position: 50% 45%;
     background-size: 200px; 
+    background-position: 50% 45%;
+    background-image: url('../img/superman.jpg');
 }
 
 .ver-mas {
-    width: 140px;
-    position: absolute;
-    bottom: 15px;
     left: 80px;
+    width: 140px;
+    bottom: 15px;
+    position: absolute;
     border-radius: 5px;
 }
 
 footer {
-    position: absolute;
-    top: 1800px;
     left: 0;
+    top: 1800px;
     width: 100%;
     padding: 28px 0;
+    position: absolute;
     text-align: center;
+}
+
+.favs {
+    top: 15px;
+    left: 15px;
+    color: #CC2424;
+    position: absolute;
+    font-size: xx-large;
+}
+
+.add-circle {
+    color: #00669F;
+    top: 1000px;
+    right: 10px;
+    position:absolute;
+    font-size: 40px;
+    border-radius: 50%;
+    border: 10px solid #00669F;
+    box-shadow: inset 0 0 0 6px #00669F;
 }
