--- a/css/styles.css
+++ b/css/styles.css
@@ -2,23 +2,63 @@
 
 * {
     margin: 0;
+    font-weight: lighter;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: "Roboto", sans-serif;
+}
+
+:root {
+    --heart-color: #CC2424;
+    --header-color: #00669F;
+    --card-color: #F3F3F3;
+    --offer-color: #1CD1B0;
+    --shadow-color: #00000025;
+
+    --card-width: 300px;
+    --card-height: 490px;
+    --card-left: calc(50% - var(--card-width)/2);
+
+    --bg-size: 550px;
+    --bg-height: 180px;
+    --bg-batman: url('../img/bg-batman.jpg');
+    --bg-wonderw: url('../img/bg-wonderw.jpg');
+    --bg-superman: url('../img/bg-superman.jpg');
+
+    --img-size: 130px;
+    --img-left: calc(var(--card-width)/2 - var(--img-size)/2);
+    --img-top: calc(var(--bg-height) - 10px - var(--img-size)/2);
+    --img-batman: url('../img/batman.jpg');
+    --img-wonderw: url('../img/wonderw.jpg');
+    --img-superman: url('../img/superman.jpg');
+
+    --boton-width: 130px;
+    --boton-left: calc(var(--card-width)/2 - var(--boton-width)/2);
 }
 
 #offer{
-    background-color: #1CD1B0;
     height: 25px;
     padding-bottom: 10px;
     background-size: 150px;
-    background-position: 30px 5px;
     background-repeat: no-repeat;
+    background-position: 30px 5px;
+    background-color: var(--offer-color);
     background-image: url('../img/Descuentos-20.png');
 }
 
-header, footer, .ver-mas {
+.add-circle {
+    top: 50%;
+    right: 5px;
+    position: fixed;
+    font-size: 40px;
+    border-radius: 50%;
+    color: var(--header-color);
+    border: 10px solid var(--header-color);
+    box-shadow: inset 0 0 0 10px var(--header-color);
+}
+
+header, footer, .boton-vm {
     color: white;
-    background-color: #00669F;
+    background-color: var(--header-color);
 }
 
 header {
@@ -28,7 +68,7 @@ header {
     padding-top: 18px;
     padding-left: 30px;
     padding-bottom: 18px;
-    box-shadow: 0px 5px 3px #00000040;
+    box-shadow: 0px 5px 2px var(--shadow-color);
 }
 
 h1, h2 {
@@ -36,66 +76,80 @@ h1, h2 {
     font-family: "Roboto", sans-serif;
 }
 
+
 main {
     padding-top: 30px;
 }
 
 .card, .card-bg, .card-img {
-    box-shadow: 0px 2px 2px 0px #00000040;
+    box-shadow: 0px 2px 0px var(--shadow-color);
 }
 
 .card {
-    width: 300px;
-    height: 500px;
+    left: var(--card-left);
+    width: var(--card-width);
+    height: var(--card-height);
     display: flex;
     position: relative;
     margin-bottom: 40px; 
-    background: #F3F3F3;
     flex-direction: column;
-    left: calc(50% - 150px);
+    background-color: var(--card-color);
 }
 
-.card p {
-    font-size:15px;
-    text-align: left;
-    padding: 5px 17px; 
+.card h2 {
+    padding: 15px 0;
+    font-size: 27px;
 }
 
-.ver-mas, h2 {
-    padding: 15px 0; 
+.boton-vm, h2 {
     text-align: center;
 }
 
+.card p {
+    padding: 0 18px; 
+    font-size: 15px;
+    text-align: left;
+}
+
+.fa-heart {
+    top: 10px;
+    left: 20px;
+    color: var(--heart-color);
+    position: absolute;
+    font-size: x-large;
+    transform: scale(1, .84);
+}
+
 .card-bg {
-    height: 180px;
+    height: var(--bg-height);
     margin-bottom: 50px;
     border-radius: 25px 25px 0 0;   
     background-repeat: no-repeat;
 }
 
-#bg-batman {
-    background-size: 550px;
+#bg-batman {    
+    background-size: var(--bg-size);
+    background-image: var(--bg-batman);
     background-position: 75% 50%;
-    background-image: url('../img/bg-batman.jpg');
 }
 
 #bg-wonderw {
-    background-size: 350px;
-    background-position: 80% 45%;
-    background-image: url('../img/bg-wonderw.jpg');
+    background-size: var(--bg-size);
+    background-image: var(--bg-wonderw);
+    background-position: 30% 25%;
 }
 
 #bg-superman {
-    background-size: 550px;
+    background-size: var(--bg-size);
+    background-image: var(--bg-superman);
     background-position: 30% 25%;
-    background-image: url('../img/bg-superman.jpg');
 }
 
 .card-img {
-    left: 85px;
-    top: 100px;
-    width: 130px;
-    height: 130px;
+    top: var(--img-top);
+    left: var(--img-left);
+    width: var(--img-size);
+    height: var(--img-size);
     position:absolute;
     border-radius: 50%;
     background-repeat: no-repeat;
@@ -103,54 +157,36 @@ main {
 
 #img-batman {
     background-size: 400px;
+    background-image: var(--img-batman);
     background-position: 58% 0;
-    background-image: url('../img/batman.jpg');
 }
 
 #img-wonderw {
-    background-size: 150px; 
+    background-size: 140px; 
+    background-image: var(--img-wonderw);
     background-position: 50% 0;
-    background-image: url('../img/wonderw.jpg');
 }
 
 #img-superman {
     background-size: 200px; 
+    background-image: var(--img-superman);
     background-position: 50% 45%;
-    background-image: url('../img/superman.jpg');
 }
 
-.ver-mas {
-    left: 80px;
-    width: 140px;
+.boton-vm {
+    left: var(--boton-left);
+    width: var(--boton-width);
     bottom: 15px;
+    padding: 12px;
     position: absolute;
     border-radius: 5px;
 }
 
 footer {
-    left: 0;
-    top: 1800px;
+    top: 1750px;
     width: 100%;
-    padding: 28px 0;
+    padding: 24px;
     position: absolute;
+    font-style: bolder;
     text-align: center;
-}
-
-.favs {
-    top: 15px;
-    left: 15px;
-    color: #CC2424;
-    position: absolute;
-    font-size: xx-large;
-}
-
-.add-circle {
-    color: #00669F;
-    top: 1000px;
-    right: 10px;
-    position:absolute;
-    font-size: 40px;
-    border-radius: 50%;
-    border: 10px solid #00669F;
-    box-shadow: inset 0 0 0 6px #00669F;
 }
