--- a/css/styles.css
+++ b/css/styles.css
@@ -65,17 +65,9 @@ header {
     top: 0;
     z-index: 1;
     position: sticky;
-    padding-top: 18px;
-    padding-left: 30px;
-    padding-bottom: 18px;
+    padding: 18px 0 18px 30px;
     box-shadow: 0px 5px 2px var(--shadow-color);
 }
-
-h1, h2 {
-    font-weight: lighter;
-    font-family: "Roboto", sans-serif;
-}
-
 
 main {
     padding-top: 30px;
