--- a/css/styles.css
+++ b/css/styles.css
@@ -45,15 +45,12 @@
     background-image: url('../img/Descuentos-20.png');
 }
 
-.add-circle {
+#boton-circle {
+    height: 50px;
+    width: 50px;
     top: 50%;
     right: 5px;
     position: fixed;
-    font-size: 40px;
-    border-radius: 50%;
-    color: var(--header-color);
-    border: 10px solid var(--header-color);
-    box-shadow: inset 0 0 0 10px var(--header-color);
 }
 
 header, footer, .boton-vm {
