--- a/css/styles.css
+++ b/css/styles.css
@@ -1,103 +1,66 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
-
+@import url('./variables.css');
 * {
     margin: 0;
-    font-weight: lighter;
     box-sizing: border-box;
+    font-style: normal;
+    font-weight: normal;
     font-family: "Roboto", sans-serif;
 }
 
-:root {
-    --heart-color: #CC2424;
-    --header-color: #00669F;
-    --card-color: #F3F3F3;
-    --offer-color: #1CD1B0;
-    --shadow-color: #00000025;
 
-    --card-width: 300px;
-    --card-height: 490px;
-    --card-left: calc(50% - var(--card-width)/2);
+/* LOGIN */
 
-    --bg-size: 500px;
-    --bg-height: 180px;
-    --bg-batman: url('../img/bg-b.jpg');
-    --bg-wonderw: url('../img/bg-w.jpg');
-    --bg-superman: url('../img/bg-s.jpg');
-
-    --img-size: 130px;
-    --img-left: calc(var(--card-width)/2 - var(--img-size)/2);
-    --img-top: calc(var(--bg-height) - 10px - var(--img-size)/2);
-    --img-batman: url('../img/bman.jpg');
-    --img-wonderw: url('../img/ww.jpg');
-    --img-superman: url('../img/sman.jpg');
-
-    --boton-width: 130px;
-    --boton-left: calc(var(--card-width)/2 - var(--boton-width)/2);
+form {
+    width: 40%;
+    height: 30%;
+    position: absolute;
+    left: 30%;
+    top: 30%;
 }
 
-#offer{
-    height: 25px;
-    padding-bottom: 10px;
-    background-size: 150px;
-    background-repeat: no-repeat;
-    background-position: 30px 5px;
+input[type=text],
+input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+
+/* ==== */
+
+#offer {
+    height: 23px;
+    padding-top: 2px;
+    padding-left: 20px;
     background-color: var(--offer-color);
-    background-image: url('../img/Descuentos-20.png');
 }
 
-#boton-circle {
-    height: 50px;
-    width: 50px;
-    top: 50%;
-    right: 5px;
-    position: fixed;
-}
-
-header, footer, .boton-vm {
-    color: white;
-    background-color: var(--header-color);
-}
-
-header {
-    top: 0;
-    z-index: 1;
-    position: sticky;
-    padding: 18px 0 18px 30px;
-    box-shadow: 0px 5px 2px var(--shadow-color);
-}
-
-main {
-    padding-top: 30px;
-}
-
-.card, .card-bg, .card-img {
-    box-shadow: 0px 2px 0px var(--shadow-color);
-}
-
-.card {
-    left: var(--card-left);
-    width: var(--card-width);
-    height: var(--card-height);
-    display: flex;
+#logo {
+    padding: 3px 20px 3px 10px;
     position: relative;
-    margin-bottom: 40px; 
-    flex-direction: column;
-    background-color: var(--card-color);
 }
 
-.card h2 {
-    padding: 15px 0;
-    font-size: 27px;
+nav {
+    height: 40px;
+    position: relative;
+    background-color: black;
 }
 
-.boton-vm, h2 {
-    text-align: center;
+ul {
+    align-items: right;
+    position: absolute;
+    right: 20px;
 }
 
-.card p {
-    padding: 0 18px; 
-    font-size: 15px;
-    text-align: left;
+ul a {
+    padding: 10px;
+    display: inline-block;
+    text-decoration: none;
+    color: white;
 }
 
 .fa-heart {
@@ -109,29 +72,89 @@ main {
     transform: scale(1, .84);
 }
 
+header,
+footer,
+.boton-vm {
+    color: white;
+    background-color: var(--header-color);
+}
+
+.boton-vm {
+    width: var(--boton-width);
+    left: var(--boton-left);
+    bottom: 15px;
+    padding: 12px;
+    position: absolute;
+    border-radius: 5px;
+}
+
+.card h2,
+.boton-vm {
+    text-align: center;
+}
+
+header {
+    top: 0;
+    z-index: 1;
+    height: 80px;
+    position: sticky;
+    display: flex;
+    align-items: center;
+    box-shadow: 0px 5px 2px var(--shadow-color);
+}
+
+header h2 {
+    font-size: 30px;
+    position: absolute;
+    left: 130px;
+    top: 27px;
+}
+
+main {
+    height: var(--page-height);
+    position: relative;
+}
+
+section {
+    position: absolute;
+    left: calc(50% - var(--section-width)/2);
+    top: calc((var(--page-height))/2 - var(--card-height)/2 - var(--bg-height)/2);
+    width: var(--section-width);
+}
+
+.card,
+.card-bg,
+.card-img {
+    box-shadow: 0px 2px 0px var(--shadow-color);
+}
+
+.card {
+    width: var(--card-width);
+    height: var(--card-height);
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    background-color: var(--card-color);
+}
+
+.card h2 {
+    text-transform: uppercase;
+    padding: 10px 0;
+    font-size: 30px;
+}
+
+.card p {
+    padding: 0 18px;
+    text-align: left;
+}
+
 .card-bg {
     height: var(--bg-height);
-    margin-bottom: 50px;
-    border-radius: 25px 25px 0 0;   
+    margin-bottom: 75px;
+    border-radius: 25px 25px 0 0;
     background-repeat: no-repeat;
-}
-
-#bg-batman {    
     background-size: var(--bg-size);
-    background-image: var(--bg-batman);
-    background-position: 75% 50%;
-}
-
-#bg-wonderw {
-    background-size: var(--bg-size);
-    background-image: var(--bg-wonderw);
-    background-position: 30% 25%;
-}
-
-#bg-superman {
-    background-size: var(--bg-size);
-    background-image: var(--bg-superman);
-    background-position: 30% 25%;
+    background-position: var(--bg-pos);
 }
 
 .card-img {
@@ -139,43 +162,41 @@ main {
     left: var(--img-left);
     width: var(--img-size);
     height: var(--img-size);
-    position:absolute;
+    position: absolute;
     border-radius: 50%;
-    background-repeat: no-repeat;
+}
+
+#bg-batman {
+    background-image: var(--bg-batman);
+}
+
+#bg-wonderw {
+    background-image: var(--bg-wonderw);
+}
+
+#bg-superman {
+    background-image: var(--bg-superman);
 }
 
 #img-batman {
-    background-size: 140px;
+    background-size: var(--bg-size);
     background-image: var(--img-batman);
     background-position: 58% 0;
 }
 
 #img-wonderw {
-    background-size: 140px; 
+    background-size: var(--bg-size);
     background-image: var(--img-wonderw);
     background-position: 50% 0;
 }
 
 #img-superman {
-    background-size: 140px; 
+    background-size: 140px;
     background-image: var(--img-superman);
     background-position: 50% 45%;
 }
 
-.boton-vm {
-    left: var(--boton-left);
-    width: var(--boton-width);
-    bottom: 15px;
-    padding: 12px;
-    position: absolute;
-    border-radius: 5px;
-}
-
 footer {
-    top: 1750px;
-    width: 100%;
     padding: 24px;
-    position: absolute;
-    font-style: bolder;
     text-align: center;
 }
