--- a/css/styles.css
+++ b/css/styles.css
@@ -8,9 +8,6 @@
     font-family: "Roboto", sans-serif;
 }
 
-
-/* LOGIN */
-
 form {
     width: 40%;
     height: 30%;
@@ -26,11 +23,7 @@ input[type=password] {
     margin: 8px 0;
     display: inline-block;
     border: 1px solid #ccc;
-    box-sizing: border-box;
 }
-
-
-/* ==== */
 
 #offer {
     height: 23px;
@@ -117,9 +110,11 @@ main {
 
 section {
     position: absolute;
-    left: calc(50% - var(--section-width)/2);
-    top: calc((var(--page-height))/2 - var(--card-height)/2 - var(--bg-height)/2);
-    width: var(--section-width);
+    display: flex;
+    justify-content: space-between;
+    left: var(--cards-left);
+    top: calc((var(--page-height))/2 - var(--card-height)/2);
+    width: var(--cards-width);
 }
 
 .card,
@@ -131,7 +126,6 @@ section {
 .card {
     width: var(--card-width);
     height: var(--card-height);
-    display: flex;
     position: relative;
     flex-direction: column;
     background-color: var(--card-color);
@@ -153,8 +147,9 @@ section {
     margin-bottom: 75px;
     border-radius: 25px 25px 0 0;
     background-repeat: no-repeat;
-    background-size: var(--bg-size);
-    background-position: var(--bg-pos);
+    background-size: cover;
+    background-position: 75% 50%;
+    ;
 }
 
 .card-img {
@@ -164,6 +159,8 @@ section {
     height: var(--img-size);
     position: absolute;
     border-radius: 50%;
+    background-size: 140px;
+    background-position: 58% 0;
 }
 
 #bg-batman {
@@ -179,15 +176,11 @@ section {
 }
 
 #img-batman {
-    background-size: var(--bg-size);
     background-image: var(--img-batman);
-    background-position: 58% 0;
 }
 
 #img-wonderw {
-    background-size: var(--bg-size);
     background-image: var(--img-wonderw);
-    background-position: 50% 0;
 }
 
 #img-superman {
@@ -197,6 +190,9 @@ section {
 }
 
 footer {
+    width: 100%;
     padding: 24px;
     text-align: center;
+    position: absolute;
+    bottom: 0;
 }
