--- a/css/styles.css
+++ b/css/styles.css
@@ -193,6 +193,5 @@ footer {
     width: 100%;
     padding: 24px;
     text-align: center;
-    position: absolute;
-    bottom: 0;
+    position: relative;
 }
