[MOD] Se acomodo el footer.

--- a/css/styles.css
+++ b/css/styles.css
@@ -193,5 +193,6 @@ footer {
     width: 100%;
     padding: 24px;
     text-align: center;
-    position: relative;
+    position: absolute;
+    top: calc(var(--page-height) + var(--bg-height));
 }
