[ADD][MOD] se importan fuentes, se modifica login.

--- a/css/variables.css
+++ b/css/variables.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Karla:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
 :root {
     --heart-color: #CC2424;
     --header-color: #00669F;
