--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
 @import url('./variables.css');
 * {
     margin: 0;
@@ -16,13 +15,36 @@ form {
     top: 30%;
 }
 
+h2 {
+    font-family: "Inter", sans-serif;
+    font-size: 72px;
+    font-weight: bold;
+    color: #333333;
+    margin-bottom: 55px;
+}
+
 input[type=text],
 input[type=password] {
+    height: 60px;
     width: 100%;
+    font-size: 20px;
     padding: 12px 20px;
-    margin: 8px 0;
     display: inline-block;
-    border: 1px solid #ccc;
+    margin-bottom: 20px;
+    border: 1.53px solid #000000;
+    font-family: "Karla", sans-serif;
+}
+
+button[type=submit] {
+    font-size: 24px;
+    font-family: "Karla", sans-serif;
+    font-weight: bold;
+    background-color: #1CD1B0;
+    border-radius: 23px;
+    margin-top: 40px;
+    padding: 5px;
+    width: 100%;
+    border: none;
 }
 
 #offer {
