--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ form p a {
     color: #00669F;
 }
 
-h2 {
+form h2 {
     font-family: "Inter", sans-serif;
     font-size: 72px;
     font-weight: bold;
@@ -160,7 +160,7 @@ header {
     box-shadow: 0px 5px 2px var(--shadow-color);
 }
 
-header h2 {
+header h1 {
     font-size: 30px;
     position: absolute;
     left: 130px;
