--- a/css/styles.css
+++ b/css/styles.css
@@ -1,259 +1,31 @@
 @import url('./variables.css');
+@import url('./header.css');
 * {
     margin: 0;
-    box-sizing: border-box;
+    padding: 0;
     font-style: normal;
     font-weight: normal;
-    font-family: "Roboto", sans-serif;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
-form {
-    width: var(--form-width);
-    height: 30%;
-    position: absolute;
-    left: 30%;
-    top: 15%;
-}
-
-form p {
-    text-align: center;
-}
-
-form * {
-    font-family: "Karla", sans-serif;
-    margin: 10px 0;
-}
-
-form p a {
-    text-decoration: none;
-    color: #00669F;
-}
-
-form h2 {
-    font-family: "Inter", sans-serif;
-    font-size: 72px;
-    font-weight: bold;
-    color: #333333;
-}
-
-input[type=text],
-input[type=email],
-input[type=password],
-select {
-    width: 100%;
-    height: 60px;
-    font-size: 20px;
-    padding: 12px 20px;
-    border: 1.53px solid #000000;
-    font-family: "Karla", sans-serif;
-}
-
-#botones {
-    display: flex;
-    position: relative;
-    justify-content: space-between;
-}
-
-button[type=submit] {
-    width: 100%;
-}
-
-input[type=submit],
-button[type=submit] {
-    background-color: #1CD1B0;
-}
-
-input[type=reset] {
-    background-color: #888888;
-    color: white;
-}
-
-#campos {
-    margin: 30px 0;
-}
-
-input[type=reset],
-input[type=submit] {
-    width: 48%;
-}
-
-button[type=submit],
-input[type=reset],
-input[type=submit] {
-    font-size: 24px;
-    font-family: "Karla", sans-serif;
-    font-weight: bold;
-    border-radius: 23px;
-    padding: 10px;
-    border: none;
-}
-
-#offer {
-    height: 23px;
-    padding-top: 2px;
-    padding-left: 20px;
-    background-color: var(--offer-color);
-}
-
-#logo {
-    padding: 3px 20px 3px 10px;
-}
-
-nav {
-    height: 40px;
-    position: relative;
-    background-color: #001D2D;
-    box-shadow: 0px 4px 4px 0px #00000040;
-}
-
-ul {
-    align-items: right;
-    position: absolute;
-    right: 20px;
-}
-
-ul a {
-    padding: 10px;
-    display: inline-block;
-    text-decoration: none;
-    color: white;
-}
-
-.fa-heart {
-    top: 10px;
-    left: 20px;
-    color: var(--heart-color);
-    position: absolute;
-    font-size: x-large;
-    transform: scale(1, .84);
-}
-
-header,
-footer,
-.boton-vm {
-    color: white;
-    background-color: var(--header-color);
-}
-
-.boton-vm {
-    bottom: 15px;
-    padding: 12px;
-    position: absolute;
-    border-radius: 5px;
-    left: var(--boton-left);
-    width: var(--boton-width);
-}
-
-.card h2,
-.boton-vm {
-    text-align: center;
-}
-
-header {
-    top: 0;
-    z-index: 1;
-    height: 80px;
-    position: sticky;
-    align-items: center;
-    box-shadow: 0px 5px 2px var(--shadow-color);
-}
-
-h1 {
-    top: 27px;
-    left: 130px;
-    font-size: 30px;
-    position: absolute;
+*:focus {
+    outline: none;
 }
 
 main {
+    height: 952px;
+    display: flex;
     position: relative;
-    height: var(--page-height);
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 }
 
 section {
     display: flex;
-    position: absolute;
-    left: var(--cards-left);
-    width: var(--cards-width);
+    align-items: center;
+    flex-direction: row;
+    width: var(--section-width);
     justify-content: space-between;
-    top: calc((var(--page-height))/2 - var(--card-height)/2);
-}
-
-.card,
-.card-bg,
-.card-img {
-    box-shadow: 0px 2px 0px var(--shadow-color);
-}
-
-.card {
-    display: inline-block;
-    position: relative;
-    width: var(--card-width);
-    height: var(--card-height);
-    background-color: var(--card-color);
-}
-
-.card h2 {
-    text-transform: uppercase;
-    padding: 10px 0;
-    font-size: 30px;
-}
-
-.card p {
-    padding: 0 18px;
-    text-align: left;
-}
-
-.card-bg {
-    height: var(--bg-height);
-    margin-bottom: 75px;
-    border-radius: 25px 25px 0 0;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 75% 50%;
-    ;
-}
-
-.card-img {
-    top: var(--img-top);
-    left: var(--img-left);
-    width: var(--img-size);
-    height: var(--img-size);
-    position: absolute;
-    border-radius: 50%;
-    background-size: 140px;
-    background-position: 58% 0;
-}
-
-#bg-batman {
-    background-image: var(--bg-batman);
-}
-
-#bg-wonderw {
-    background-image: var(--bg-wonderw);
-}
-
-#bg-superman {
-    background-image: var(--bg-superman);
-}
-
-#img-batman {
-    background-image: var(--img-batman);
-}
-
-#img-wonderw {
-    background-image: var(--img-wonderw);
-}
-
-#img-superman {
-    background-size: 140px;
-    background-image: var(--img-superman);
-    background-position: 50% 45%;
-}
-
-footer {
-    width: 100%;
-    padding: 24px;
-    text-align: center;
-    position: relative;
 }
