--- a/css/variables.css
+++ b/css/variables.css
@@ -1,15 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Karla:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
 :root {
-    --heart-color: #CC2424;
+    --offer-color: #1CD1B0;
     --header-color: #00669F;
     --card-color: #F3F3F3;
-    --offer-color: #1CD1B0;
+    --heart-color: #CC2424;
     --shadow-color: #00000025;
-    --page-height: 1000px;
-    --form-width: 40%;
-    --cards-width: 1000px;
-    --cards-left: calc(50% - var(--cards-width)/2);
+    --details-color: #2C0187;
+    --page-height: 1120px;
+    --form-width: 430px;
+    --section-width: 1020px;
+    --section-top: calc(50% - var(--card-height)/2);
+    --section-left: calc(50% - var(--section-width)/2);
     --card-width: 300px;
     --card-height: 530px;
     --bg-height: 190px;
