--- a/css/header.css
+++ b/css/header.css
@@ -22,7 +22,7 @@ footer,
 }
 
 #logo {
-    padding: 3px 20px 3px 10px;
+    padding: 0px 20px;
 }
 
 h1 {
@@ -32,8 +32,27 @@ h1 {
     position: absolute;
 }
 
+nav {
+    width: 100%;
+    height: 40px;
+    background-color: #001D2D;
+    box-shadow: 0px 4px 4px 0px #00000040;
+}
+
+ul {
+    align-items: right;
+    position: absolute;
+    right: 20px;
+}
+
+ul a {
+    padding: 10px;
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+}
+
 footer {
     width: 100%;
     padding: 24px;
-    position: relative;
 }
