--- a/css/home.css
+++ b/css/home.css
@@ -1,53 +1,19 @@
 @import url('styles.css');
-nav {
-    top: 0;
-    width: 100%;
-    height: 40px;
-    position: absolute;
-    background-color: #001D2D;
-    box-shadow: 0px 4px 4px 0px #00000040;
-}
-
-ul {
-    align-items: right;
-    position: absolute;
-    right: 20px;
-}
-
-ul a {
-    padding: 10px;
-    display: inline-block;
-    text-decoration: none;
-    color: white;
-}
-
 .card {
-    padding: 0 .5%;
     display: inline-block;
     position: relative;
     width: var(--card-width);
     height: var(--card-height);
     background-color: var(--card-color);
+    margin-bottom: 60px;
+    margin-right: 60px;
 }
 
-.card,
-.card-bg,
-.card-img {
-    box-shadow: 0px 2px 0px var(--shadow-color);
-}
-
-.fa-heart {
-    top: 10px;
-    left: 20px;
-    position: absolute;
-    font-size: x-large;
-    transform: scale(1, .84);
-    color: var(--heart-color);
-}
-
-.card,
-.card-bg {
-    border-radius: 25px 25px 0 0;
+.card:hover,
+.boton-vm:hover,
+#plus:hover {
+    transform: scale(1.15);
+    transition: 3s;
 }
 
 .card-bg {
@@ -69,6 +35,30 @@ ul a {
     background-position: 58% 0;
 }
 
+.fa-heart:hover {
+    color: slateblue;
+}
+
+.fa-heart {
+    top: 10px;
+    left: 20px;
+    position: absolute;
+    font-size: x-large;
+    transform: color 0.8s linear 0.2s;
+    color: var(--heart-color);
+}
+
+.card,
+.card-bg {
+    border-radius: 25px 25px 0 0;
+}
+
+.card,
+.card-bg,
+.card-img {
+    box-shadow: 0px 2px 0px var(--shadow-color);
+}
+
 .card h2 {
     padding: 10px 0;
     font-size: 30px;
@@ -82,8 +72,18 @@ footer {
 }
 
 .card p {
-    padding: 0 18px;
+    width: 265px;
+    margin: 0 auto;
     text-align: left;
+}
+
+.boton-vm {
+    bottom: 15px;
+    padding: 12px;
+    position: absolute;
+    border-radius: 5px;
+    left: var(--boton-left);
+    width: var(--img-size);
 }
 
 #bg-batman {
@@ -110,11 +110,14 @@ footer {
     background-image: var(--img-superman);
 }
 
-.boton-vm {
-    bottom: 15px;
-    padding: 12px;
-    position: absolute;
-    border-radius: 5px;
-    left: var(--boton-left);
-    width: var(--boton-width);
+#plus {
+    width: 82px;
+    height: 82px;
+    right: 5%;
+    position: fixed;
+    top: calc(50% - 41px);
+}
+
+#plus:hover {
+    content: url("../img/button2.svg");
 }
