[MOD] se arreglaron margenes y botones.

--- a/css/forms.css
+++ b/css/forms.css
@@ -3,6 +3,16 @@ form * {
     font-family: "Karla", sans-serif;
 }
 
+section {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+}
+
+form {
+    width: var(--form-width);
+}
+
 h2 {
     margin-top: 0;
     font-family: "Inter", sans-serif;
