--- a/css/añadir.css
+++ b/css/añadir.css
@@ -3,10 +3,14 @@ section {
     color: white;
     background-color: var(--header-color);
     box-shadow: 0px 0px 2px 1px #0000004D;
-    margin: 40px auto;
+    margin: auto;
     max-width: var(--main-height);
     padding: 0 5%;
     height: 100%;
+}
+
+main {
+    padding: 80px 10px 40px;
 }
 
 section * {
