--- a/css/añadir.css
+++ b/css/añadir.css
@@ -1,4 +1,8 @@
 @import url("./styles.css");
+main {
+    padding: 80px 10px 40px;
+}
+
 section {
     color: white;
     background-color: var(--header-color);
@@ -7,10 +11,6 @@ section {
     max-width: var(--main-height);
     padding: 0 5%;
     height: 100%;
-}
-
-main {
-    padding: 80px 10px 40px;
 }
 
 section * {
@@ -34,15 +34,47 @@ h2 {
     line-height: 72px;
 }
 
-textarea {
-    width: 100%;
-    height: 350px;
-    resize: none;
-}
-
 .requerido::before {
     content: "*";
     display: inline-block;
+}
+
+form {
+    height: 100%;
+}
+
+fieldset>input,
+select,
+textarea {
+    padding: 20px;
+    border: 0;
+    outline: none;
+}
+
+fieldset>input,
+select {
+    width: 100%;
+    margin-bottom: 30px;
+}
+
+fieldset {
+    width: 340px;
+    margin: 0 30px;
+    display: inline-block;
+    border: 0;
+}
+
+label {
+    display: inline-block;
+    margin-bottom: 10px;
+}
+
+#personajes {
+    height: 350px;
+}
+
+hr {
+    margin: 20px 0;
 }
 
 label,
@@ -54,31 +86,14 @@ textarea {
     border-radius: 15px;
 }
 
-fieldset>input,
-select,
 textarea {
     width: 100%;
-    padding: 20px;
-    margin-top: 5px;
-    margin: 15px 0;
-    outline: none;
-    border: 0;
-}
-
-fieldset {
-    height: 650px;
-    width: 340px;
-    margin: 0 30px;
-    display: inline-block;
-    border: 0;
+    height: 350px;
+    resize: none;
 }
 
 fieldset>p {
     height: 30px;
-}
-
-form {
-    height: 100%;
 }
 
 #añadir {
@@ -101,24 +116,16 @@ form {
     transform: scale(1.15);
 }
 
-#poderes {
-    margin-bottom: 30px;
-}
-
 input[type="checkbox"],
 input[type="radio"] {
     margin-right: 10px;
     width: 20px;
     height: 24px;
+    color: aqua
 }
 
 input[type="checkbox"]+label,
 input[type="radio"]+label {
     font-size: 16px;
     font-style: normal;
-}
-
-label {
-    display: inline-block;
-    margin-top: 20px;
 }
