--- a/css/añadir.css
+++ b/css/añadir.css
@@ -59,14 +59,14 @@ select {
 
 fieldset {
     width: 340px;
-    margin: 0 30px;
+    margin-left: 30px;
     display: inline-block;
     border: 0;
 }
 
 label {
-    display: inline-block;
     margin-bottom: 10px;
+    display: block;
 }
 
 #personajes {
@@ -122,10 +122,4 @@ input[type="radio"] {
     width: 20px;
     height: 24px;
     color: aqua
-}
-
-input[type="checkbox"]+label,
-input[type="radio"]+label {
-    font-size: 16px;
-    font-style: normal;
 }
