--- a/css/home.css
+++ b/css/home.css
@@ -9,11 +9,15 @@
     margin-right: 60px;
 }
 
+.card,
+.boton-vm,
+#plus {
+    transition: all 1s;
+}
+
 .card:hover,
-.boton-vm:hover,
-#plus:hover {
+.boton-vm:hover {
     transform: scale(1.15);
-    transition: 3s;
 }
 
 .card-bg {
@@ -56,7 +60,7 @@
 .card,
 .card-bg,
 .card-img {
-    box-shadow: 0px 2px 0px var(--shadow-color);
+    box-shadow: 0px 3px 10px var(--shadow-color);
 }
 
 .card h2 {
@@ -119,5 +123,6 @@ footer {
 }
 
 #plus:hover {
+    transform: scale(1.15);
     content: url("../img/plus2.svg");
 }
