--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ main {
 }
 
 section {
-    padding: calc((var(--main-height) - var(--card-height) - var(--bg-height))/2) 0;
+    padding: 100px 0;
     align-items: center;
     border-radius: 50px;
     margin-left: 50px;
