--- a/css/home.css
+++ b/css/home.css
@@ -1,29 +1,21 @@
 @import url('styles.css');
+@import url('animations.css');
 .card {
-    display: inline-block;
-    position: relative;
     width: var(--card-width);
-    height: var(--card-height);
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    align-items: center;
     background-color: var(--card-color);
-    margin-bottom: 60px;
-    margin-right: 60px;
-}
-
-.card,
-.boton-vm,
-#plus {
-    transition: all 1s;
-}
-
-.card:hover,
-.boton-vm:hover {
-    transform: scale(1.15);
+    margin-right: 40px;
+    margin-bottom: 40px;
 }
 
 .card-bg {
-    margin-bottom: 75px;
-    background-size: cover;
+    width: 100%;
     height: var(--bg-height);
+    margin-bottom: 60px;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: 75% 50%;
 }
@@ -39,17 +31,21 @@
     background-position: 58% 0;
 }
 
-.fa-heart:hover {
-    color: slateblue;
+.boton-vm {
+    text-decoration: none;
+    margin: 20px 0;
+    padding: 12px;
+    border-radius: 5px;
+    width: var(--img-size);
 }
 
-.fa-heart {
-    top: 10px;
+.corazoncito {
+    top: 20px;
     left: 20px;
+    color: var(--heart-color);
     position: absolute;
     font-size: x-large;
-    transform: color 0.8s linear 0.2s;
-    color: var(--heart-color);
+    transition: color 0.8s linear 0.2s;
 }
 
 .card,
@@ -79,15 +75,6 @@ footer {
     width: 265px;
     margin: 0 auto;
     text-align: left;
-}
-
-.boton-vm {
-    bottom: 15px;
-    padding: 12px;
-    position: absolute;
-    border-radius: 5px;
-    left: var(--boton-left);
-    width: var(--img-size);
 }
 
 #bg-batman {
