--- a/css/variables.css
+++ b/css/variables.css
@@ -27,3 +27,12 @@
     --boton-width: var(--img-size);
     --boton-left: var(--img-left);
 }
+
+* {
+    margin: 0;
+    padding: 0;
+    font-style: normal;
+    font-weight: normal;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+}
