--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ main {
     display: flex;
     align-items: center;
     min-height: var(--main-height);
-    padding: 0 10px;
+    padding: 40px 20px;
 }
 
 section {
@@ -12,7 +12,6 @@ section {
     flex-wrap: wrap;
     margin: auto;
     max-width: 1100px;
-    padding-left: 20px;
     border-radius: 50px;
     justify-content: space-around;
 }
