--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
 main {
     display: flex;
     align-items: center;
+    justify-content: center;
     min-height: var(--main-height);
     padding: 40px 20px;
 }
@@ -10,10 +11,9 @@ main {
 section {
     display: flex;
     flex-wrap: wrap;
-    margin: auto;
-    max-width: 1100px;
+    align-items: center;
+    justify-content: space-between;
     border-radius: 50px;
-    justify-content: space-around;
 }
 
 footer {
