--- a/css/header.css
+++ b/css/header.css
@@ -5,11 +5,14 @@
     background-color: var(--offer-color);
 }
 
+
 header {
     top: 0;
     z-index: 1;
+    display: flex;
     position: sticky;
     align-items: center;
+    justify-content: space-between;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
@@ -20,7 +23,7 @@ footer,
     background-color: var(--header-color);
 }
 
-#logo {
+.logo {
     padding: 0px 20px;
 }
 
@@ -34,7 +37,7 @@ h1 {
 nav {
     width: 100%;
     height: 40px;
-    background-color: #001D2D;
+    background-color: var(--nav-color);
     box-shadow: 0px 4px 4px 0px #00000040;
 }
 
