--- a/css/variables.css
+++ b/css/variables.css
@@ -7,6 +7,7 @@
     --heart-color: #CC2424;
     --shadow-color: #00000025;
     --details-color: #2C0187;
+    --nav-color: #001D2D;
     --main-height: 950px;
     --form-width: 430px;
     --section-width: 1100px;
