--- a/css/header.css
+++ b/css/header.css
@@ -5,7 +5,6 @@
     background-color: var(--offer-color);
 }
 
-
 header {
     top: 0;
     z-index: 1;
@@ -34,7 +33,11 @@ h1 {
     position: absolute;
 }
 
-nav {
+#main-navbar {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
     width: 100%;
     height: 40px;
     background-color: var(--nav-color);
@@ -42,6 +45,7 @@ nav {
 }
 
 ul {
+    list-style-type: none;
     align-items: right;
     position: absolute;
     right: 20px;
@@ -52,4 +56,9 @@ ul a {
     display: inline-block;
     text-decoration: none;
     color: white;
+}
+
+#life-hacks {
+    width: 100px;
+    height: 100px;
 }
